@@ -326,7 +326,7 @@ kern/ieee1275/init.c
 kern/ieee1275/openfw.c
 kern/powerpc/cache.S
 kern/powerpc/dl.c
-kern/powerpc/ieee1275/crt0.S
+kern/powerpc/ieee1275/startup.S
 kern/sparc64/cache.S
 kern/sparc64/dl.c
 kern/sparc64/ieee1275/init.c
